Fix broken css and format

--- a/resources/css/admin-bar.css
+++ b/resources/css/admin-bar.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 @layer base {
-     {
+    #admin-bar {
         --background: 0 0% 100%;
         --foreground: 240 10% 3.9%;
 
